--- a/scss/05_ArticleBody/table.timeline.scss
+++ b/scss/05_ArticleBody/table.timeline.scss
@@ -1,6 +1,10 @@
 .tl {
     border-width : 0;
 
+    @include highContrast {
+        border-collapse: collapse;
+    }
+
     th, td {
         background : none !important;
     }
@@ -34,11 +38,9 @@
         /* //_}#can-content */
         border-width   : 0 0 0 .3em;
         border-color   : $COLOR_Default_casual_fill;
-    /* //_{@modern */
-        @media (-ms-high-contrast:active) {
-            border-color :#fff;
+        @include highContrastForIE10ToEdge {
+            border-color : inherit;
         }
-    /* //_}@modern */
         border-style   : solid;
         padding        : .5em 1em;
         vertical-align : top;
@@ -97,6 +99,14 @@
         /* //_}@modern,@ie9 */
         border-width  : .35em;
         border-color  : $COLOR_Default_fill;
+        /* //_{@modern */
+        @media (-ms-high-contrast : black-on-white) {
+            & { border-color : #fff; }
+        }
+        @media (-ms-high-contrast : white-on-black) {
+            & { border-color : #000; }
+        }
+        /* //_}@modern */
     }
     /* //_}#can-content */
 
@@ -106,11 +116,9 @@
     tfoot td {
         border-width : 1px 0 0 .3em;
         border-style : solid dotted;
-    /* //_{@modern */
-        @media (-ms-high-contrast:active) {
-            border-color :#fff;
+        @include highContrastForIE10ToEdge {
+            border-color : inherit;
         }
-    /* //_}@modern */
     }
     tfoot th, tfoot td {
         border-color   : $COLOR_Default_casual_fill;
